# aoc-py

./: .env.template  .gitignore  README.md  pyproject.toml
2021/: example_answers.json  submissions.json
2021/01/: solution.py
2021/02/: solution.py
2021/03/: solution.py
2021/04/: solution.py
2021/05/: solution.py
2021/06/: solution.py
2021/07/: solution.py
2021/08/: solution.py
2021/09/: solution.py
2021/10/: solution.py
2021/12/: solution.py
2021/13/: numpy_inspired_solution.py  solution.py
2021/14/: solution.py
aoc/: __init__.py  __main__.py  constants.py  template.txt  utils.py  watcher.py
